Updated EAD-Assignment-8 and 9

--- a/EAD/EADSession8and9/views/admin/addJob.html
+++ b/EAD/EADSession8and9/views/admin/addJob.html
@@ -7,14 +7,14 @@
 <body>
 	<center>
 		<h1>Add Job</h1>
-		<form th:object="${job}" th:action="@{addJob}" method="POST">
+		<form th:object="${job}" th:action="@{addJobs}" method="POST">
 			<table width="50%">
 				<tr>
 					<td><input type="hidden" th:field="*{jobCode}" /></td>
 				</tr>
 				<tr>
 					<td>Job Name</td>
-					<td><input type="text" th:field="*{J=jobTitle}"></td>
+					<td><input type="text" th:field="*{jobTitle}"></td>
 				</tr>
 				<tr>
 					<td><input type="submit" value="submit"></td>
