--- a/EAD/EADSession8and9/views/admin/dashboard.html
+++ b/EAD/EADSession8and9/views/admin/dashboard.html
@@ -11,9 +11,9 @@
 	<br>
 	<a th:href="@{../project/addProject}">Add project</a>
 	<br>
-	<a th:href="@{../project/allProjects}">Show all project</a>
+	<a th:href="@{/project/allProjects}">Show all project</a>
 	<br>
-	<a th:href="@{../job/addJob}">Add Job</a>
+	<a th:href="@{../job/addJobs}">Add Job</a>
 	<br>
 	<a th:href="@{../skills/addSkills}">Add Skills</a>
 	<br>
