--- a/EAD/EADSession8and9/views/admin/allEmployees.html
+++ b/EAD/EADSession8and9/views/admin/allEmployees.html
@@ -33,6 +33,7 @@
 			<td th:text="${employee.contact}">Contact</td>
 			<td th:text="${employee.skypeId}">SkypeId</td>
 			<td th:text="${employee.profilePicture}">ProfilePicture</td>
+			<!--  <td th:text="${employee.password}">Password</td>-->
 			<td th:text="${employee.skills}">Skills</td>
 			<td><a th:href="${'editEmployee?code=' + employee.code}">Edit</a></td>
 			<td><a th:href="${'deleteEmployee?code=' + employee.code}">Delete</a></td>
