--- a/EAD/EADSession8and9/views/employee/editEmployee.html
+++ b/EAD/EADSession8and9/views/employee/editEmployee.html
@@ -2,42 +2,54 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Employee</title>
+<title>Edit Employee</title>
 </head>
 <body>
-	<div th:if="${not #lists.isEmpty(employees)}">
-		<h2>Employee</h2>
-		<table width="70%">
-			<tr>
-				<th>Id</th>
-				<th>FirstName</th>
-				<th>MiddleName</th>
-				<th>LastName</th>
-				<th>DOB</th>
-				<th>Gender</th>
-				<th>Email</th>
-				<th>Contact</th>
-				<th>SkypeId</th>
-				<th>Profile Picture</th>
-				<th>Skills</th>
-				<th>Edit</th>
-			</tr>
-			<tr th:each="employee : ${employees}">
-				<td th:text="${employee.code}">Id</td>
-				<td th:text="${employee.firstName}">FirstName</td>
-				<td th:text="${employee.middleName}">MiddleName</td>
-				<td th:text="${employee.lastName}">LastName</td>
-				<td th:text="${employee.dob}">DOB</td>
-				<td th:text="${employee.gender}">Gender</td>
-				<td th:text="${employee.emailId}">Email</td>
-				<td th:text="${employee.contact}">Contact</td>
-				<td th:text="${employee.skypeId}">SkypeId</td>
-				<td th:text="${employee.profilePicture}">ProfilePicture</td>
-				<!--  <td th:text="${employee.password}">Password</td>-->
-				<td th:text="${employee.skills}">Skills</td>
-				<td><a th:href="${'editEmployee?code=' + employee.code}">Edit</a></td>
-			</tr>
-		</table>
-	</div>
+	<center>
+		<h1>Edit Profile</h1>
+		<form th:object="${employee}" th:action="@{editEmployee}"
+			method="POST">
+			<table width="50%">
+				<input type="hidden" th:field="*{code}" />
+				<tr>
+					<td>First Name</td>
+					<td><input type="text" th:field="*{firstName}"></td>
+				</tr>
+				<tr>
+					<td>Middle Name</td>
+					<td><input type="text" th:field="*{middleName}"></td>
+				</tr>
+				<tr>
+					<td>Last Name</td>
+					<td><input type="text" th:field="*{lastName}"></td>
+				</tr>
+				<tr>
+					<td>DateOfBirth</td>
+					<td><input type="date" th:field="*{dob}"></td>
+				</tr>
+				<tr>
+					<td>Gender</td>
+					<td><input type="radio" th:field="*{gender}" value="Male">Male
+						<input type="radio" th:field="*{gender}" value="Female">Female</td>
+				</tr>
+				<tr>
+					<td>EmailId</td>
+					<td><input type="text" th:field="*{emailId}"></td>
+				</tr>
+				<tr>
+					<td>Skills</td>
+					<td><select multiple th:field="*{skills}">
+							<option value="IT">IT</option>
+							<option value="Operations">Operations</option>
+							<option value="Sales">Sales</option>
+							<option value="Manager">Manager</option>
+					</select></td>
+				</tr>
+				<tr>
+					<td><input type="submit" value="submit"></td>
+				</tr>
+			</table>
+		</form>
+	</center>
 </body>
 </html>
